Fixed more spacing with cards and breadcrumb. Still dislike cards component but will fix later

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -27,26 +27,22 @@ img {
     font-family: 'Syne', sans-serif;
 }
 
-#outer {
-    margin: 0;
-}
-
 #outer-row {
-    margin: 0;
+    margin: 60px 0 0 0;
     height: 50vh;
     width: 100%;
-
-}
-
-#intro-container {
-    height: 100%;
-    padding: 2vh;
 }
 
 #content-intro {
-    height: 100%;
+    margin-bottom: 30px;
 
     color: #E6DBC5;
+}
+
+@media screen and (min-width: 768px) {
+    #content-intro {
+        margin: 0;
+    }
 }
 
 #mask {
